--- a/main.html
+++ b/main.html
@@ -1,56 +1,51 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-<div>
-	<button block-inline-button>Test1</button>
-</div>
+<!-- the entire body must be written by student -->
+ <div>
+	<button data-ns-test="block-inline-button">Test1</button>
+	<button data-ns-test="block-inline-button">Test2</button>
+	 Answer: Inline
+ </div>
 	<div>
-		<div block-inline-div>Test2</div>
+		<div data-ns-test="block-inline-div">Test1</div>
+		<div data-ns-test="block-inline-div">Test2</div>
+		 Answer: Block
 	</div>
-<div>
-	<span block-inline-span>Test1</span>
-</div>
-	<div>
-		<p block-inline-p>Test2</p>
+   <div>
+		<span data-ns-test="block-inline-span">Test1</span>
+		<span data-ns-test="block-inline-span">Test2</span>
+	    Answer: Inline
 	</div>
 	<div>
-		<input block-inline-input	>Test1
+		<p data-ns-test="block-inline-p">Test1</p>
+		<p data-ns-test="block-inline-p">Test2</p>
+		 Answer: Block
 	</div>
 	<div>
-		<cite block-inline-cite	>Test1</cite>
+		<input data-ns-test="block-inline-input">Test1</input>
+		<input data-ns-test="block-inline-input">Test2</input>
+		 Answer: Inline
 	</div>
 	<div>
-		<code block-inline-code	>Test2</code>
+		<cite data-ns-test="block-inline-cite">Test1</cite>
+		<cite data-ns-test="block-inline-cite">Test2</cite>
+		 Answer: Inline
 	</div>
 	<div>
-		<h1 block-inline-h1	>Test1</h1>
+		<code data-ns-test="block-inline-code">Test1</code>
+		<code data-ns-test="block-inline-code">Test2</code>
+		 Answer: Inline
 	</div>
 	<div>
-		<sup block-inline-sup	>Test2</sup>
+		<h1 data-ns-test="block-inline-h1">Test1</h1>
+		<h1 data-ns-test="block-inline-h1">Test2</h1>
+		 Answer: Block
 	</div>
 	<div>
-		<sub block-inline-sub	>Test1</sub>
+		<sup data-ns-test="block-inline-sup">Test1</sup>
+		<sup data-ns-test="block-inline-sup">Test2</sup>
+		 Answer: Inline
 	</div>
-
-
-
-
-
-
-
-
-
-	
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+	<div>
+		<sub data-ns-test="block-inline-sub">Test1</sub>
+		<sub data-ns-test="block-inline-sub">Test2</sub>
+		 Answer: Inline
+	</div>
